<resources>
    <string name="app_name">제주용달협회</string>
    <string name="app_tel">064-758-1101</string>
    <string name="app_name_topic">제주용달협회 서비스</string>
    <string name="fcm_topic">UCARGO_JEJU_DRIVER2</string>
    <string name="service_topic">UCARGO_JEJU_SERVICE</string>
    <string name="url_cafe">http://cafe.15880424.com/?hp={phone}&amp;memberType=1</string>
    <string name="url_userspace">{host}UserSpace_v2</string>
    <string name="url_rulepay">{host}Notice/MyAllocation</string>
    <string name="url_rule1">{host}terms/agreement/1</string>
    <string name="url_rule2">{host}terms/agreement/2</string>
    <string name="url_rule3">{host}terms/agreement/3</string>
    <string name="url_rule4">{host}terms/agreement/4</string>
    <string name="url_event">{host}terms/event</string>
    <string name="url_cardjoin">https://www.pay-line.co.kr/ebpp</string>
    <string name="no_ready">대기</string>
    <string name="main_button1">협회소개</string>
    <string name="main_button2">주요사업</string>
    <string name="main_button3">업무안내</string>
    <string name="main_button4">협회안내</string>
    <string name="main_button5">공지사항</string>
    <string name="main_button6">관련사이트</string>
    <string name="main_button7">화물정보</string>
    <string name="main_button8">이사화물정보</string>
    <string name="main_button9">복지몰</string>
    <string name="main_button10">더 보기</string>
    <string name="main_title1">실시간 화물정보</string>
    <string name="main_tel">064-758-1101</string>
    <string name="main_board1">공지사항</string>
    <string name="main_board2">소식</string>
    <string name="main_board3">FAQ</string>
    <string name="alert_yes">예</string>
    <string name="alert_no">아니오</string>
    <string name="alert_ok">확인</string>
    <string name="alert_setting">설정</string>
    <string name="alert_back">이전</string>
    <string name="alert_next">다음</string>
    <string name="alert_select">선택하기</string>
    <string name="alert_selectok">선택완료</string>
    <string name="alert_save">저장하기</string>
    <string name="alert_cancle">취소</string>
    <string name="alert_close">닫기</string>
    <string name="alert_update">업데이트</string>
    <string name="alert_stop">그만보기</string>
    <string name="alert_call">콜센터 연결</string>
    <string name="alert_reselect">다시 선택</string>
    <string name="alert_start">처음으로</string>
    <string name="alert_noshow">다시 보지 않기</string>
    <string name="alert_weeknoshow">일주일간 보지 않기</string>
    <string name="alert_join">가입하기</string>
    <string name="alert_agree">동의</string>
    <string name="alert_listcancle">배차취소</string>
    <string name="alert_banksend">이체하기</string>
    <string name="alert_edit">수정</string>
    <string name="alert_callcenter">고객센터</string>
    <string name="alert_renew">신규가입</string>
    <string name="dialog_permission_title">권한요청</string>
    <string name="dialog_permission_check">앱 실행에 필요한 권한이 승인되지 않았습니다.\n권한을 승인 하시겠습니까?\n[아니오]를 선택하시면, 앱이 종료됩니다.</string>
    <string name="dialog_update_title">업데이트 안내</string>
    <string name="dialog_update">정상적인 서비스 이용을 위해\n업데이트가 필요합니다.</string>
    <string name="dialog_finish_title">제주용달협회 앱 종료</string>
    <string name="dialog_finish_info">제주용달협회 앱을 종료하시겠습니까?\n[예]를 선택하시면 앱이 종료 됩니다.</string>
    <string name="dialog_cardjoin_title">카드결제 서비스 미가입 안내</string>
    <string name="dialog_cardjoin_info">카드결제 서비스에 가입되지 않아 카드화물배차를 받으실 수 없습니다.\n\n카드결제서비스 가입 :\nwww.pay-line.co.kr/ebpp\n전화상담: 1800-1234</string>
    <string name="dialog_card_title">신용카드결제</string>
    <string name="dialog_card_info">카드결제에 가입된 회원이 아닙니다.\n\n신용카드 가맹점\n전화문의 1661-0003</string>
    <string name="dialog_setok_title">배차요청</string>
    <string name="dialog_setok_info">배차 요청을 하시겠습니까?\n\n※ 화면 이동 후 통화 및 배차취소를 해주세요.</string>
    <string name="dialog_cardsetok_title">카드결제 화물배차 알림</string>
    <string name="dialog_cardsetok_info"><![CDATA[<div align="left"><font color="#038acc">1. 총운송료에서 수수료 1.298%<br />&nbsp;&nbsp;&nbsp;(VAT 포함) 공제<br />2. 인수증 사진촬영 필수<br />3. 세금계산서 발행 안함</font></div><div align="center">배차 요청을 하시겠습니까?<br /><br />※ 화면 이동 후 통화 및 배차취소를 해주세요.</div>]]></string>
    <string name="dialog_location_title">위치서비스</string>
    <string name="dialog_location_info">정확한 \'현재 위치\' 설정을 위해\n위치 서비스 사용 권한을 켜주세요.</string>
    <string name="dialog_rule_title1">이용약관</string>
    <string name="dialog_rule_title2">위치추적 활용동의 약관</string>
    <string name="dialog_rule_title3">운송가맹 약관</string>
    <string name="dialog_rule_title4">개인정보 수집ㆍ이용 및 제3자 제공동의서</string>
    <string name="dialog_login_error_id">아이디를 입력해 주세요.</string>
    <string name="dialog_login_error_pass">비밀번호를 입력해 주세요.</string>
    <string name="dialog_login_error_passid">아이디가 입력되지 않았습니다.\n아이디를 입력해주시거나,\n아이디 찾기를 진행해주세요.</string>
    <string name="dialog_findid_title">아이디 찾기</string>
    <string name="dialog_findid_info">아이디 : {id}\n\n찾은 아이디를 자동입력 하시겠습니까?</string>
    <string name="dialog_findid_info2">이미 [{id}] 아이디로 가입된 회원입니다.\n\아이디를 자동입력 하시겠습니까?</string>
    <string name="dialog_findid_nonumber">현재 핸드폰 번호를 인식할 수 없습니다.\n아이디 찾기기능을 사용할 수 없습니다.\n가입한 핸드폰으로 사용해주세요.\n\n고객센터 : 1661-0003</string>
    <string name="dialog_findpass_title">비밀번호 찾기</string>
    <string name="dialog_findpass_info">비밀번호 : {pass}\n\n찾은 비밀번호를 자동입력 하시겠습니까?</string>
    <string name="dialog_findpass_nonumber">현재 핸드폰 번호를 인식할 수 없습니다.\n비밀번호 찾기기능을 사용할 수 없습니다.\n가입한 핸드폰으로 사용해주세요.\n\n고객센터 : 1661-0003</string>
    <string name="dialog_join_title">회원가입</string>
    <string name="dialog_join_nonumber">현재 핸드폰 번호를 인식할 수 없습니다.\n공기계는 회원가입이 제한됩니다.\n\n문의전화 : 1661-0003</string>
    <string name="dialog_pay_title">운송료</string>
    <string name="dialog_pay_noget">운송료 못 받음으로 처리하시겠습니까?</string>
    <string name="dialog_pay_get">운송료 받음으로 처리하시겠습니까?</string>
    <string name="dialog_loading">로딩중...</string>
    <string name="dialog_processing">처리중...</string>
    <string name="dialog_photoreselet_title">이미지 다시선택</string>
    <string name="dialog_photoreselet_info">현재 선택되어있는 이미지가 있습니다.\n다시 선택하시겠습니까?</string>
    <string name="dialog_photoreload_title">인수증 등록취소</string>
    <string name="dialog_photoreload_info">선택된 인수증을 취소하시겠습니까?\n[예]를 선택하시면 선택전으로 초기화 됩니다.</string>
    <string name="dialog_photodel_title">인수증 삭제</string>
    <string name="dialog_photodel_info">선택된 인수증을 삭제하시겠습니까?\n[예]를 선택하시면 삭제 처리됩니다.</string>
    <string name="dialog_myadd_change_title">등록시간갱신</string>
    <string name="dialog_myadd_change_info">등록 시간을 갱신하시겠습니까?\n\n등록시간을 갱신하면 차주용 화물맨에서 상단으로 올라가게 됩니다.</string>
    <string name="dialog_mybank_touser_title">이체하기</string>
    <string name="dialog_mybank_touser_info"><![CDATA[<font color="#038acc">{username}({mobile})님</font> 에게<br /> <font color="#038acc">{pay}원</font>을 이체하시겠습니까?]]></string>
    <string name="dialog_cardsend_error_type">결제품목을 선택해 주세요.</string>
    <string name="dialog_cardsend_error_price">결제금액을 입력해 주세요.</string>
    <string name="dialog_cardsend_error_pricemin">결제금액은 1,000원 이상 입력하셔야 합니다.</string>
    <string name="dialog_cardsend_error_ptype">할부기간을 선택해 주세요.</string>
    <string name="dialog_cardsend_error_result">카드결제가 승인되지 않았습니다.\n[{code}]</string>
    <string name="dialog_join_step1_rule1">이용약관 동의에 동의하셔야 서비스 이용이 가능합니다.</string>
    <string name="dialog_join_step1_rule2">개인정보활용 동의에 동의하셔야 서비스 이용이 가능합니다.</string>
    <string name="dialog_join_step1_rule3">선착불 건 주선수수료 자동정산에 동의하셔야 서비스 이용이 가능합니다.</string>
    <string name="dialog_join_step2_error_hpempty">핸드폰번호를 입력해 주세요.</string>
    <string name="dialog_join_step2_error_hpnomatch">핸드폰번호 형식에 맞지 않습니다.</string>
    <string name="dialog_join_step2_error_carnumempty">차량번호를 입력해 주세요.</string>
    <string name="dialog_join_step2_error_carnumnomatch">차량번호를 정확히 입력해 주세요.\n서울00가0000</string>
    <string name="dialog_join_step2_error_nomatchcar">개별용달협회 가입된 차량번호가\n아닙니다.\n개별용달협회 가입된 차량번호를\n입력해 주세요.\n\n고객센터: 1661-0003</string>
    <string name="dialog_join_step3_areaempty">소속지부를 선택해 주세요.</string>
    <string name="dialog_join_step3_nameempty">이름을 입력해 주세요.</string>
    <string name="dialog_join_step3_idempty">아이디를 입력해 주세요.</string>
    <string name="dialog_join_step3_idcheck">아이디 중복확인을 진행해 주세요.</string>
    <string name="dialog_join_step3_idcheck2">아이디는 최소 4자리 이상\n입력해 주세요.</string>
    <string name="dialog_join_step3_passempty">비밀번호를 입력해 주세요.</string>
    <string name="dialog_join_step3_pass2empty">비밀번호확인을 입력해 주세요.</string>
    <string name="dialog_join_step3_passnomatch">비밀번호가 일치하지 않습니다.</string>
    <string name="dialog_join_step3_passcheck">비밀번호는 최소 4자리 이상\n입력해 주세요.</string>
    <string name="dialog_join_step3_carnumempty">차량번호를 입력해 주세요.</string>
    <string name="dialog_join_step3_carnumcheck">차량번호를 정확히 입력해 주세요.\n서울00가0000</string>
    <string name="dialog_join_step3_carsizeempty">톤수를 선택해 주세요.</string>
    <string name="dialog_join_step3_cartypeempty">차종을 선택해 주세요.</string>
    <string name="dialog_join_step3_addressempty">주소를 입력해 주세요.</string>
    <string name="dialog_join_step3_biztypeempty">사업자를 선택해 주세요.</string>
    <string name="dialog_join_step3_biznumempty">사업자번호를 입력해 주세요.</string>
    <string name="dialog_join_step3_corpnameempty">상호를 입력해 주세요.</string>
    <string name="dialog_join_step3_corpceoempty">대표자를 입력해 주세요.</string>
    <string name="dialog_join_step3_corpaddressempty">사업장 주소를 입력해 주세요.</string>
    <string name="dialog_join_step3_uptaeempty">업태를 입력해 주세요.</string>
    <string name="dialog_join_step3_upjongempty">업종을 입력해 주세요.</string>
    <string name="dialog_join_step3_bankempty">은행을 선택해 주세요.</string>
    <string name="dialog_join_step3_bankuserempty">예금주명을 입력해 주세요.</string>
    <string name="dialog_join_step3_banknumempty">계좌번호를 입력해 주세요.</string>
    <string name="dialog_join_ok">회원가입이 완료 되었습니다.\n로그인 페이지로 이동합니다.</string>
    <string name="dialog_cardcacle_title">카드결제 취소</string>
    <string name="dialog_cardcacle_info">신용카드결제를 취소하시겠습니까?</string>
    <string name="dialog_newjoin_title">개별용달협회 미가입 안내</string>
    <string name="dialog_newjoin_info">신규회원가입으로 이동합니다.</string>
    <string name="dialog_litejoin_info1_1">환영합니다!</string>
    <string name="dialog_litejoin_info1_2">간편하게,</string>
    <string name="dialog_litejoin_info1_3">전체 약관 동의 후</string>
    <string name="dialog_litejoin_info1_4">신청할 수 있습니다.</string>
    <string name="dialog_litejoin_info2_0">가입신청완료!</string>
    <string name="dialog_litejoin_info2_1">제주용달협회</string>
    <string name="dialog_litejoin_info2_2">승인 후 가입완료</string>
    <string name="dialog_litejoin_info2_3">됩니다.</string>
    <string name="dialog_litejoin_info2_4">(가입승인은 최대 하루정도 소요될 수 있으며,\n승인여부는 문자로 알려드립니다.)</string>
    <string name="dialog_litejoin_info3_0">승인 대기중!</string>
    <string name="dialog_litejoin_info3_1">제주용달협회</string>
    <string name="dialog_litejoin_info3_2">승인 후 가입완료</string>
    <string name="dialog_litejoin_info3_3">됩니다.</string>
    <string name="dialog_litejoin_info3_4">(가입승인은 최대 하루정도 소요될 수 있으며,\n승인여부는 문자로 알려드립니다.)</string>
    <string name="dialog_litejoin_info4_0">가입 미승인!</string>
    <string name="dialog_litejoin_info4_1">제주용달협회 가입 먼저해주세요.</string>
    <string name="dialog_litejoin_info4_2">1. 제주용달협회 가입이 안 되신 경우</string>
    <string name="dialog_litejoin_info4_3">2. 제주용달협회 가입되신 회원 중 미승인 된 경우</string>
    <string name="dialog_litejoin_info4_4">제주용달협회 문의부탁드립니다.</string>
    <string name="dialog_button_agreejoin">동의하고 가입신청하기</string>
    <string name="dialog_button_close">닫기</string>
    <string name="title_rule1">이용약관 동의</string>
    <string name="title_rule2">개인정보활용 동의</string>
    <string name="title_rule3">선착불 건 주선수수료 자동정산</string>
    <string name="title_rule4">개인정보 제 3자 정보제공 동의</string>
    <string name="mylistview_call">화주연결</string>
    <string name="mylistview_cancle">배차취소</string>
    <string name="mylistview_send">전송하기</string>
    <string name="mylistview_up">상차하기</string>
    <string name="mylistview_status1">화물정보</string>
    <string name="mylistview_status2">화주정보</string>
    <string name="mylistview_status3">인수증전송</string>
    <string name="qrout_text">고객님의 예치금을 출금합니다.\n보내실 금액을 입력해 주세요.</string>
    <string name="qr_point_hint">예치금을 입력해 주세요.</string>
    <string name="qrcode_send">QR코드 만들기</string>
</resources>