<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/qr_inout_text"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        style="@style/userText07"
        android:gravity="center"
        android:text="@string/qrout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/qr_price"
        android:hint="@string/qr_point_hint"
        style="@style/inputType2"
        android:inputType="number"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/qrcode_send"
        style="@style/userButton07"
        android:text="@string/qrcode_send"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:id="@+id/qrcode_cancle"
        style="@style/userButton08"
        android:text="@string/alert_cancle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
</LinearLayout>