<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorUser7">
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:background="@drawable/box_type1_3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:visibility="visible"
                android:id="@+id/litejoin_step1"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <TextView
                    style="@style/userText03"
                    android:textColor="@color/colorUser2"
                    android:textSize="20dp"
                    android:text="@string/dialog_litejoin_info1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:paddingTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:text="@string/dialog_litejoin_info1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingLeft="8dp"
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/dialog_litejoin_info1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp">
                    <ImageView
                        android:src="@drawable/round_type1_1"
                        android:layout_width="3dp"
                        android:layout_height="3dp"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:id="@+id/litejoin_check1_text"
                        style="@style/userText11"
                        android:textSize="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/title_rule1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp">
                    <ImageView
                        android:src="@drawable/round_type1_1"
                        android:layout_width="3dp"
                        android:layout_height="3dp"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:id="@+id/litejoin_check4_text"
                        style="@style/userText11"
                        android:textSize="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/title_rule4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp">
                    <ImageView
                        android:src="@drawable/round_type1_1"
                        android:layout_width="3dp"
                        android:layout_height="3dp"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:id="@+id/litejoin_check3_text"
                        style="@style/userText11"
                        android:textSize="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/title_rule3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp">
                    <ImageView
                        android:src="@drawable/round_type1_1"
                        android:layout_width="3dp"
                        android:layout_height="3dp"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:id="@+id/litejoin_check2_text"
                        style="@style/userText11"
                        android:textSize="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/title_rule2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginTop="15dp"
                    android:paddingBottom="10dp"
                    style="@style/userText17"
                    android:textSize="15dp"
                    android:text="@string/dialog_litejoin_info1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/litejoin_step2"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="160dp">
                <TextView
                    style="@style/userText03"
                    android:textColor="@color/colorUser2"
                    android:textSize="20dp"
                    android:text="@string/dialog_litejoin_info2_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:text="@string/dialog_litejoin_info2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingLeft="8dp"
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/dialog_litejoin_info2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:text="@string/dialog_litejoin_info2_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/dialog_litejoin_info2_4"
                    style="@style/userText11"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/litejoin_step3"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="160dp">
                <TextView
                    style="@style/userText03"
                    android:textColor="@color/colorUser2"
                    android:textSize="20dp"
                    android:text="@string/dialog_litejoin_info3_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:text="@string/dialog_litejoin_info3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:paddingLeft="8dp"
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/dialog_litejoin_info3_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        style="@style/userText17"
                        android:textSize="16dp"
                        android:text="@string/dialog_litejoin_info3_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/dialog_litejoin_info3_4"
                    style="@style/userText11"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/litejoin_step4"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="160dp">
                <TextView
                    style="@style/userText03"
                    android:textColor="@color/colorUser2"
                    android:textSize="20dp"
                    android:text="@string/dialog_litejoin_info4_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="15dp"
                    style="@style/userText17"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/dialog_litejoin_info4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="5dp"
                    style="@style/userText11"
                    android:textSize="15dp"
                    android:text="@string/dialog_litejoin_info4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="5dp"
                    style="@style/userText11"
                    android:textSize="15dp"
                    android:text="@string/dialog_litejoin_info4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="5dp"
                    style="@style/userText17"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/dialog_litejoin_info4_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/litejoin_close"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ico_close"
                android:scaleType="fitXY"
                android:layout_width="35dp"
                android:layout_height="35dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/litejoin_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/ico_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/litejoin_yes"
                android:paddingRight="50dp"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                android:textColor="@color/colorUser2"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="@string/dialog_button_agreejoin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <Button
                android:visibility="gone"
                android:id="@+id/litejoin_no"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="18dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="@string/dialog_button_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>