<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorUser17">
    <include layout="@layout/inc_header" />
    <RadioGroup
        android:id="@+id/mylistview_statusbox"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:weightSum="3"
        android:gravity="center_vertical">
        <RadioButton
            android:id="@+id/mylistview_status1"
            style="@style/radioType10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/mylistview_status1"
            android:checked="true"
            />
        <ImageView
            android:id="@+id/mylistview_split1"
            android:background="@color/colorUser8"
            android:layout_width="1dp"
            android:layout_height="15dp" />
        <RadioButton
            android:id="@+id/mylistview_status2"
            style="@style/radioType10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/mylistview_status2"
            />
        <ImageView
            android:id="@+id/mylistview_split2"
            android:background="@color/colorUser8"
            android:layout_width="1dp"
            android:layout_height="15dp" />
        <RadioButton
            android:id="@+id/mylistview_status3"
            style="@style/radioType10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/mylistview_status3"
            />
    </RadioGroup>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/mylistview_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorUser1"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/mylistview_btnstep1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/mylistview_call"
                style="@style/userButton07"
                android:text="@string/mylistview_call"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/mylistview_updown"
                style="@style/userButton09"
                android:text="@string/mylistview_up"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/mylistview_cancle"
                style="@style/userButton10"
                android:text="@string/mylistview_cancle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/mylistview_btnstep2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10">
            <Button
                android:id="@+id/mylistview_close"
                style="@style/userButton08"
                android:text="@string/alert_cancle"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/mylistview_send"
                style="@style/userButton07"
                android:text="@string/mylistview_send"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>